<resources>
    <string name="app_name">ConversorContaAgua</string>
    <string name="digite_o_valor_total_da_gua_sem_taxa_servico">Digite o valor total da Água sem taxa serviço:</string>
    <string name="digite_o_consumo_por_metro">Digite o consumo por metro:</string>
    <string name="calcular">Calcular</string>
    <string name="digite_valor_da_taxa_de_servico">Digite valor da taxa de Serviço:</string>
    <string name="digite_o_valor_utilizado_no_mes_passado">Digite o valor utilizado no mês passado:</string>
    <string name="digite_o_valor_utilizado_nesse_mes">Digite o valor utilizado nesse mês:</string>
    <string name="taxa_dividida_entre_as_2_casas">Taxa dividida entre as 2 casas:</string>
    <string name="total_utilizado_este_mes">Total utilizado este mês:</string>
    <string name="total_em_reais_por_metro_utilizado">Total em reais por metro utilizado:</string>
    <string name="total_a_pagar_pelo_usuario">Total a pagar pelo usuario:</string>

    <string-array name="meses">
        <item>Janeiro</item>
        <item>Fevereiro</item>
        <item>Março</item>
        <item>Abril</item>
        <item>Maio</item>
        <item>Junho</item>
        <item>Julho</item>
        <item>Agosto</item>
        <item>Setembro</item>
        <item>Outubro</item>
        <item>Novembro</item>
        <item>Dezembro</item>


    </string-array>

</resources>
