<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/digite_o_valor_total_da_gua_sem_taxa_servico" />

    <EditText
        android:id="@+id/editValorAguaSemTaxaServico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/digite_o_consumo_por_metro" />

    <EditText
        android:id="@+id/edit_ValorConsumoPorMetro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/digite_valor_da_taxa_de_servico" />

    <EditText
        android:id="@+id/edit_ValorTaxaServico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/digite_o_valor_utilizado_no_mes_passado" />

    <EditText
        android:id="@+id/edit_ValorUtilizadoMesPassado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/digite_o_valor_utilizado_nesse_mes" />

    <EditText
        android:id="@+id/edit_ValorUtilizadoEsteMes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />

    <Button
        android:id="@+id/buttonCalcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calcular" />

    <TextView
        android:id="@+id/text_TotalDividoEntre2Casas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/taxa_dividida_entre_as_2_casas" />

    <TextView
        android:id="@+id/textTotalUtilizadoEsteMes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_utilizado_este_mes" />

    <TextView
        android:id="@+id/textTotalPorMetroUtilizado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_em_reais_por_metro_utilizado" />

    <TextView
        android:id="@+id/textTotalPagarPeloUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_a_pagar_pelo_usuario" />


</LinearLayout>